# docs/swagger.yaml
@@ -183,6 +183,68 @@ definitions:
       user_id:
         type: integer
     type: object
+  modelsocialmedia.Request:
+    properties:
+      name:
+        type: string
+      social_media_url:
+        type: string
+    type: object
+  modelsocialmedia.Response:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      social_media_url:
+        type: string
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  modelsocialmedia.ResponseList:
+    properties:
+      created_at:
+        example: "2021-11-03T01:52:41.035Z"
+        type: string
+      id:
+        example: 1
+        type: integer
+      name:
+        example: jhondoe
+        type: string
+      social_media_url:
+        example: https://example.com/url
+        type: string
+      updated_at:
+        example: "2021-11-03T01:52:41.035Z"
+        type: string
+      user:
+        properties:
+          id:
+            example: 1
+            type: integer
+          profile_image_url:
+            example: https://example.com/photo.jpg
+            type: string
+          username:
+            example: jhondoe
+            type: string
+        type: object
+      user_id:
+        example: 1
+        type: integer
+    type: object
+  modelsocialmedia.ResponseListWrapper:
+    properties:
+      social_medias:
+        items:
+          $ref: '#/definitions/modelsocialmedia.ResponseList'
+        type: array
+    type: object
   modeluser.ExampleRequestUpdate:
     properties:
       email:
@@ -454,24 +516,13 @@ paths:
     get:
       consumes:
       - application/json
-      description: GetByUserID a photo
+      description: GetPhotos a photo
       parameters:
       - description: Bearer + user token
         in: header
         name: Authorization
         required: true
         type: string
-      - description: ID of the photo
-        in: path
-        name: photoID
-        required: true
-        type: integer
-      - description: data
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/modelphoto.Request'
       produces:
       - application/json
       responses:
@@ -511,7 +562,7 @@ paths:
                 errors:
                   $ref: '#/definitions/helper.ExampleErrorResponse'
               type: object
-      summary: GetByUserID a photo
+      summary: GetPhotos a photo
       tags:
       - photos
     post:
@@ -661,6 +712,175 @@ paths:
       summary: Update a photo
       tags:
       - photos
+  /socialmedias:
+    get:
+      consumes:
+      - application/json
+      description: Get all social media
+      parameters:
+      - description: Bearer + user token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: SUCCESS
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/modelsocialmedia.ResponseListWrapper'
+              type: object
+      summary: Get all social media
+      tags:
+      - socialmedias
+    post:
+      consumes:
+      - application/json
+      description: Create social media
+      parameters:
+      - description: Bearer + user token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/modelsocialmedia.Request'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: CREATED
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/modelsocialmedia.Response'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseResponse'
+            - properties:
+                errors:
+                  $ref: '#/definitions/helper.ExampleErrorResponse'
+              type: object
+      summary: Create new social media
+      tags:
+      - socialmedias
+  /socialmedias/:socialmediaid:
+    delete:
+      consumes:
+      - application/json
+      description: Delete by id social media
+      parameters:
+      - description: Bearer + user token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: ID of the social media
+        in: path
+        name: socialmediaid
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: SUCCESS
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/modelsocialmedia.Response'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseResponse'
+            - properties:
+                errors:
+                  $ref: '#/definitions/helper.ExampleErrorResponse'
+              type: object
+        "404":
+          description: Record not found
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseResponse'
+            - properties:
+                errors:
+                  $ref: '#/definitions/helper.ExampleErrorResponse'
+              type: object
+      summary: Delete by id social media
+      tags:
+      - socialmedias
+    put:
+      consumes:
+      - application/json
+      description: Update by id social media
+      parameters:
+      - description: Bearer + user token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: ID of the social media
+        in: path
+        name: socialmediaid
+        required: true
+        type: integer
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/modelsocialmedia.Request'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: SUCCESS
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/modelsocialmedia.Response'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseResponse'
+            - properties:
+                errors:
+                  $ref: '#/definitions/helper.ExampleErrorResponse'
+              type: object
+        "404":
+          description: Record not found
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseResponse'
+            - properties:
+                errors:
+                  $ref: '#/definitions/helper.ExampleErrorResponse'
+              type: object
+      summary: Update by id social media
+      tags:
+      - socialmedias
   /users:
     delete:
       consumes:
